--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,8 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
-
-
-
-
-
-
 
 body {
     /* more on this crazy alphanumerical value in  a mintue! */
@@ -16,30 +10,49 @@ color: #39a6b2;
 font-family: Arial, Helvetica, sans-serif;}
 
 /* apply styles to header*/
-header {padding:20px 35px;
+header {
+    padding:20px 35px;
     background-color: #39a6b2;
     }
-    header h1 {
+header h1 {
         font-weight: 36px;
         color: #fce138;
         margin: 0;
         display: inline;
     }
-
-    header a 
+header a 
     {
         text-decoration: none;
         color:#fce138;
     }
 
-    header nav {
+header nav {
         float: right;
         margin: 7px 0;
     }
 
-    header nav ul li {
+header nav ul li {
         display: inline;
         margin: 0 30px;
         font-weight: lighter;
         font-size: 22px;
     }
+footer {
+    background: #fce138;
+    width: 100%;
+    padding: 40px 35px;
+}
+
+footer h2 {
+    display: inline;
+    color: #024e76;
+    margin: 0;
+}
+footer div{
+    float: right;
+    line-height: 1.5;
+    text-align: right;
+}
+footer a{
+    color: #024e76;
+}
