--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ header h1 {
         color: #fce138;
         margin: 0;
         display: inline;
+        font-size: 36px;
     }
 header a 
     {
@@ -31,8 +32,7 @@ header nav {
         margin: 7px 0;
     }
 
-header nav ul li {
-        display: inline;
+header nav ul li a{
         margin: 0 30px;
         font-weight: lighter;
         font-size: 22px;
@@ -47,6 +47,7 @@ footer h2 {
     display: inline;
     color: #024e76;
     margin: 0;
+    font-size: 30px;
 }
 footer div{
     float: right;
@@ -67,7 +68,7 @@ footer a{
     height: 600px;
     background-size: cover;
     background-position: center;
-    position:relative
+    position:relative;
 }
 /*Hero Style End*/
 
@@ -81,22 +82,18 @@ footer a{
     bottom: 120px;
     right: 140px;
 }
-
-.hero-form p{
-    margin: 5px 0 15px 0;
-}
-
 .hero-form h3 {
     font-size:24px;
     margin: 0;
 }
+
 .hero-form p{
     margin: 5px 0 15px 0;
 }
 
 .form-input{
     border: 1px soild #024e76;
-    display:block;
+    display: block;
     padding: 7px 15px;
     font-size:16px;
     color: #024e76;
@@ -118,28 +115,102 @@ footer a{
 .intro{
     text-align: center;
 }
-.intro h2{
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138
-}
-.intro h2{
-    font-size:55px;
-    margin-bottom:35px;
-    color: #024e76;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    border-color: #fce138;
-    display: inline-block; 
-}
+
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
-    position: center;
+}
+
+.steps {
+    text-align: center;
+    background:#fce138;
+
+}
+.steps div {
+    margin-bottom: 80px;
+}
+.step img {
+    width: 15%;
+    margin:10px 0;
+}
+.steps h3{
+    color: #024e76;
+    font-size: 46px;
+    margin-top: 10px;
+}
+.steps p {
+    color: #39a6b2;
+    font-size: 23px;
+}
+
+.steps span {
+    font-size: 38px;
+}
+
+.section-title{
+    font-size:55px ;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border{
+    border-color: #fce138;
+
+}
+
+.secondary-border{
+    border-color: #39a6b2;
+}
+
+
+.steps span {
+    font-size: 38px;
+}
+
+.trainers {
+    text-align: center;
+}
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background:#024e76;
+    color:#fce138;
+    overflow: auto;
+}
+.trainer img { 
+    width: 35%;
+    float:left;
+}
+.trainer-bio {
+    padding:35px;
+    float:left;
+    width:65%
+}
+.text-left {
+    text-align: left;
+    
+}
+.text-right {
+    text-align: right;
+}
+
+.trainer-bio h3{
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+.trainer-bio p {
+    font-size: 17px;
+    line-height:1.3;
 }
